param eval impl